<resources>

    <!--Itens globais-->
    <string name="app_name">Checker</string>
    <string name="developer1">Fernando Soares</string>
    <string name="developer2">Lael Nervis</string>
    <string name="version">v2.0</string>
    <string name="year">2016</string>
    <string name="location">CTA - IFRS</string>


    <!-- Itens do toolbar da activity_main -->
    <string name="main_toolbar_title">Checker</string>
    <string name="main_toolbar_item_menu1">Sair</string>
    <string name="main_toolbar_item_menu2">Tela Inicial</string>

    <!-- Itens activity_main -->
    <string name="main_button_1_title">Avaliação</string>
    <string name="main_button_2_title">Relatórios</string>
    <string name="main_button_3_title">Sobre</string>
    <string name="main_dialog_title">Entre com o título da nova avaliação.</string>
    <string name="main_dialog_edittext_hint">Título</string>


    <!-- Itens do toolbar da activity_sobre -->
    <string name="sobre_toolbar_title">Sobre</string>

    <!-- Itens activity_sobre -->
    <string name="sobre_texto">
        Este aplicativo tem, como objetivo, facilitar a avaliação de acessibilidade física dos ambientes, mais especificamente, os estabelecimentos comerciais do município de Garibaldi - RS.
         \n\nO aplicativo se propõe a armazenar as avaliações realizadas, gerando um resultado de cada avaliação, bem como um relatório provisório.
         \n\nO presente projeto faz parte dos estudos do trabalho de conclusão do curso de Tecnologia em Analise e Desenvolvimento de Sistemas do IFRS/BG.
         \n\nFoi desenvolvido em Java no AndroidStudio  e utiliza Realm como banco de dados.
         \n\nPara mais informações, entre em contato com Fernando Sebenello Soares:
         \nTelefone: (54)999360382
         \nE-mail: sebenello@gmail.com
    </string>

    <!--Este aplicativo tem como objetivo facilitar a avaliação de acessibilidade física dos campo do IFRS, armazenando as avaliações realizadas, gerando um resultado de cada avaliação assim como um relatório provisório.-->
    <!--\n\nO presente aplicativo é um projeto em desenvolvimento, iniciado na disciplina de Tópicos I e atualmente reformulado na disciplina de Desenvolvimento III do curso de ADS do IFRS-BG. Foi desenvolvido em Java no AndroidStudio  e utiliza Realm como banco de dados.-->
    <!--\n\nPara mais informações contate os desenvolvedores: Fernando Soares (fernando.soares@bento.ifrs.edu.br) ou Lael Nervis (lael.nervis@ifrs.edu.br).-->

    <!-- Este aplicativo tem, como objetivo, facilitar a avaliação de acessibilidade física dos ambientes, mais especificamente, os estabelecimentos comerciais do município de Garibaldi - RS.
         \n O aplicativo se propoe a armazenar as avaliações realizadas, gerando um resultado de cada avaliação, bem como um relatório provisório.
         \n O presente projeto faz parte dos estudos do trabalho de conclusão do curso de Tecnologia em Analise e Desenvolvimento de Sistemas do IFRS/BG.
         \n Foi desenvolvido em Java no AndroidStudio  e utiliza Realm como banco de dados.-->


    <!-- Itens do toolbar da activity_avalicao -->
    <string name="avaliacao_toolbar_title">Avaliação</string>

    <!-- Itens activity_avalicao -->
    <string name="avaliacao_button_text">Resultado</string>


    <!-- Itens do toolbar da activity_questao -->
    <string name="questao_toolbar_title">Avaliação</string>

    <!-- Itens activity_questao -->
    <string name="questao_button_text">Concluir Etapa</string>
    <string name="questao_textview_1">Numeração</string>
    <string name="questao_textview_2">Pergunta</string>
    <string name="questao_radiobutton_1">Sim</string>
    <string name="questao_radiobutton_2">Não</string>
    <string name="questao_radiobutton_3">Parcialmente</string>
    <string name="questao_radiobutton_4">Não se aplica</string>


    <!-- Itens do toolbar da activity_listarelatorio -->
    <string name="listarelatorio_toolbar_title">Lista de Relatórios</string>


    <!-- Itens activity_resultado -->
    <string name="resultado_button_1_title">Editar</string>
    <string name="resultado_button_2_title">Avaliar Novamente</string>
    <string name="resultado_button_3_title">Compartilhar</string>
    <string name="resultado_novo">Novo</string>
    <string name="resultado_bom">Bom</string>
    <string name="resultado_regular">Regular</string>
    <string name="resultado_ruim">Ruim</string>

    <!-- Itens do toolbar da activity_resultado -->
    <string name="resultado_toolbar_title">Resultado</string>


    <!-- Itens activity_relatorio -->
    <string name="relatorio_toolbar_title">Relatório</string>

    <!-- Itens footer -->
    <string name="footer_text_1">Checker &#8211; v1.0 Beta &#8211; 2017</string>
    <string name="footer_text_2">IFRS | Fernando Sebenello Soares</string>
    <string name="footer_description_image">Logo do app</string>
    <string name="title_activity_relatorio">RelatorioActivity</string>

</resources>
