<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_pergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/questao_textview_2"
        android:textStyle="bold"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup_linha">

        <RadioButton
            android:id="@+id/mRadio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@drawable/custom_radio_button"
            android:text="@string/questao_radiobutton_1"
            />

        <RadioButton
            android:id="@+id/mRadio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@drawable/custom_radio_button"
            android:text="@string/questao_radiobutton_2"
            />

        <RadioButton
            android:id="@+id/mRadio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@drawable/custom_radio_button"
            android:text="@string/questao_radiobutton_3"
            />

        <RadioButton
            android:id="@+id/mRadio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@drawable/custom_radio_button"
            android:text="@string/questao_radiobutton_4"
            />

    </RadioGroup>

</LinearLayout>